--- a/example-projects/gml-raptor-demo/datafiles/locale/locale_en.json
+++ b/example-projects/gml-raptor-demo/datafiles/locale/locale_en.json
@@ -99,11 +99,10 @@
     }
   },
   "ui_demo": {
-    "show_sizeable": "[scale,1.25]Sizable Window (empty)",
     "sizable_window_title": "A sizable window",
-    "control_tree": "[scale,1.25]Control Docking",
-    "show_login": "[scale,1.25]Demo Login",
-    "login_window_title": "Login",
+    "window_title_docking": "Control Docking",
+    "show_login": "[scale,1.25][?=ui_demo/window_title_login]",
+    "show_alignment": "[scale,1.25][?=ui_demo/window_title_alignment]",
     "login_top_message": "To continue, login here",
     "login_user": "Username:",
     "login_pwd": "Password:",
@@ -111,6 +110,12 @@
     "login_remember": "Remember user name and password",
     "login_entered_values": "Demonstrating read-out of control in a dynamic window:",
     "add_dock_plus": "+",
-    "dock_demo_info": "Press any of the [ci_bright]'x'[/] buttons to\ndynamically add docked elements.\n\nLeft- or right-click any of the [ci_bright]docked elements[/]\nto grow/shrink them to see dynamic re-layouting."
+    "show_anchoring": "[scale,1.25][?=ui_demo/window_title_anchoring]",
+    "dock_demo_info": "Press any of the [ci_bright]'x'[/] buttons to\ndynamically add docked elements.\n\nLeft- or right-click any of the [ci_bright]docked elements[/]\nto grow/shrink them to see dynamic re-layouting.",
+    "show_control_tree": "[scale,1.25][?=ui_demo/window_title_docking]",
+    "anchor_top_message": "Demonstrating control [ci_accent]anchoring[/]",
+    "window_title_alignment": "Control Alignment",
+    "window_title_login": "Login Dialog Demo",
+    "window_title_anchoring": "Control Anchoring"
   }
 }
