--- a/example-projects/gml-raptor-demo/datafiles/locale/locale_en.json
+++ b/example-projects/gml-raptor-demo/datafiles/locale/locale_en.json
@@ -2,7 +2,7 @@
   "legal": {
     "game_name": "gml-raptor Demo",
     "company": "Coldrock Games",
-    "copyright": "(c)2023 Coldrock Games",
+    "copyright": "(c)2023 [? legal/company]",
     "locale_author": "Haerion Coldrock aka Grisgram",
     "developer": "Haerion Coldrock aka Grisgram"
   },
