--- a/example-projects/gml-raptor-demo/datafiles/locale/locale_en.json
+++ b/example-projects/gml-raptor-demo/datafiles/locale/locale_en.json
@@ -2,7 +2,7 @@
   "legal": {
     "game_name": "gml-raptor Demo",
     "company": "Coldrock Games",
-    "copyright": "(c)2023 [?legal/company]",
+    "copyright": "(c)2023 [? legal/company]",
     "locale_author": "Haerion Coldrock aka Grisgram",
     "developer": "Haerion Coldrock aka Grisgram"
   },
@@ -117,6 +117,7 @@
     "window_title_alignment": "Control Alignment",
     "window_title_login": "Login Dialog Demo",
     "window_title_anchoring": "Control Anchoring",
-    "alignment_top_message": "Demonstrating control [ci_accent]alignment[/]"
+    "alignment_top_message": "Demonstrating control [ci_accent]alignment[/]",
+    "label_made_with_tree": "[ci_bright]The Buttons (and this text here)[/] \nhave been created and aligned through\nthe [ci_bright]ControlTree[/] at the [ci_bright]ROOT_UI[/]!\nTake a look at the source code of the \nRoomController of this room, there you\ncan see, how this has been done!\n"
   }
 }
