--- a/gml-raptor/datafiles/locale/locale_en.json
+++ b/gml-raptor/datafiles/locale/locale_en.json
@@ -1,47 +1,45 @@
 {
-	"legal" : {
-		"game_name"		: "enter-game-name-here",
-		"company"		: "Coldrock Games",
-		"copyright": "(c)2023 [?legal/company]",
-		"locale_author"	: "Haerion Coldrock aka Grisgram",
-    	"developer"		: "Haerion Coldrock aka Grisgram",
-	},
-	
-	"credits" : {
-		"credits_title" : "Credits",
-	},
-	
-	"global_words" : {
-		"buttons" : {
-			"ok" 		: "OK",
-			"apply" 	: "Apply",
-			"cancel" 	: "Cancel",
-			"yes" 		: "Yes",
-			"no" 		: "No",
-			"save" 		: "Save",
-			"retry" 	: "Retry",
-			"ignore" 	: "Ignore",
-			"undo" 		: "Undo",
-			"back" 		: "Back",
-			"continue" 	: "Continue",
-		},
-		
-		"keyboard" : {
-			"shift" 	: "Shift",
-			"ctrl" 		: "Ctrl",
-			"alt" 		: "Alt",
-		},
-		
-		"states": {
-		  "disconnected": "Disconnected",
-		  "inactive"	: "Inactive",
-		  "connected"	: "Connected",
-		  "active"		: "Active",
-		  "unlocked"	: "Unlocked",
-		  "locked"		: "Locked",
-		  "closed"		: "Closed",
-		  "open"		: "Open"
-		}
-	},
-
+  "legal": {
+    "game_name": "enter-game-name-here",
+    "company": "Coldrock Games",
+    "copyright": "(c) [? legal/company]",
+    "locale_author": "Haerion Coldrock aka Grisgram",
+    "developer": "Haerion Coldrock aka Grisgram",
+    "game_channel_beta": "Beta",
+    "game_channel_prod": "Production",
+    "game_channel_dev": "Development"
+  },
+  "credits": {
+    "credits_title": "Credits"
+  },
+  "global_words": {
+    "buttons": {
+      "ok": "OK",
+      "apply": "Apply",
+      "cancel": "Cancel",
+      "yes": "Yes",
+      "no": "No",
+      "save": "Save",
+      "retry": "Retry",
+      "ignore": "Ignore",
+      "undo": "Undo",
+      "back": "Back",
+      "continue": "Continue"
+    },
+    "keyboard": {
+      "shift": "Shift",
+      "ctrl": "Ctrl",
+      "alt": "Alt"
+    },
+    "states": {
+      "disconnected": "Disconnected",
+      "inactive": "Inactive",
+      "connected": "Connected",
+      "active": "Active",
+      "unlocked": "Unlocked",
+      "locked": "Locked",
+      "closed": "Closed",
+      "open": "Open"
+    },
+  },
 }
