--- a/example-projects/gml-raptor-demo/datafiles/locale/locale_de.json
+++ b/example-projects/gml-raptor-demo/datafiles/locale/locale_de.json
@@ -74,12 +74,14 @@
       "version_label": "Sieh dir die version.json Datei im Included Files Ordner an!",
       "inputbox": "Gib etwas Text ein und teste die UX:\n[ci_accent]Cursortasten[/], [ci_accent]Shift+Cursor[/]\n[ci_accent]Pos1, End[/] (mit und ohne Shift)\n[ci_accent]Mouse-Click[/], [ci_accent]Mouse-Drag[/] zum Selektieren,\n[ci_accent]Strg-C, Strg-X, Strg-V[/] etc\n\nDie InputBox ist sehr komfortabel!",
       "playground_button": "Grisgram's Spielwiese.\nDieser Raum ist nicht übersetzt, keine Benutzerführung.\nHier teste ich einige Features von raptor, was auch immer gerade\nin Entwicklung ist.",
-      "animation": "Hier siehst du eine Animation, die mit nur einer Zeile Code\nerstellt wurde, basierend auf AnimCurves.\nDie Partikel-Emitter sind gänzlich ohne Code erstellt.\nDie Partikel selbst wurden mit dem ParticleEditor generiert.\nSchau ins [ci_accent]raptor-wiki[/] für mehr Information!"
+      "animation": "Hier siehst du eine Animation, die mit nur einer Zeile Code\nerstellt wurde, basierend auf AnimCurves.\nDie Partikel-Emitter sind gänzlich ohne Code erstellt.\nDie Partikel selbst wurden mit dem ParticleEditor generiert.\nSchau ins [ci_accent]raptor-wiki[/] für mehr Information!",
+      "ui_theme": "Ein [ci_accent]THEME[/] ist ein vordefiniertes Set von Farben für das UI und kann jederzeit gewechselt werden!\nSchau in die [ci_accent]APP_THEMING[/] Seite im wiki!"
     },
     "start_playground": "[scale,1.25]Dev Playground",
     "start_uidemo": "[scale,1.25]UI Demo starten",
     "version_label_string": "[c_yellow]<- Dies ist die GameVersionLabel control[/]",
-    "copyright_label_string": "[c_yellow]<- Dies ist die CopyrightLabel control[/]"
+    "copyright_label_string": "[c_yellow]<- Dies ist die CopyrightLabel control[/]",
+    "label_choose_theme": "Wähle das UI_THEME mit diesen Buttons.\nBlau ist das default theme von raptor."
   },
   "play": {
     "how_to_play_states": {
