big steps forward in async

--- a/example-projects/gml-raptor-demo/datafiles/locale/locale_de.json
+++ b/example-projects/gml-raptor-demo/datafiles/locale/locale_de.json
@@ -10,8 +10,14 @@
     "game_channel_prod": "Production",
     "game_channel_dev": "Development"
   },
+  "startup_server": {
+	  "connecting": "Verbinde zum Server...",
+	  "connection_success": "[?states/connected]",
+	  "connection_failed": "[?states/disconnected]",
+  },
   "credits": {
-    "credits_title": "Credits"
+    "credits_title": "Credits",
+	"credits_text": "",
   },
   "global_words": {
     "buttons": {
@@ -43,91 +49,4 @@
       "open": "Offen"
     }
   },
-  "main_menu": {
-    "header_text": "Willkommen zur [?legal/game_name]",
-    "version_str": "Version {0} [c_yellow]<- Das ist der Inhalt der Datei version.json[/]",
-    "start_state_game": "[scale,1.25]StateMachine Demo starten",
-    "start_race_game": "[scale,1.25]Race Demo starten",
-    "show_message": "[scale,1.25]MessageBox anzeigen",
-    "exit_game": "[scale,1.25]Spiel beenden",
-    "player_name": "Gib deinen Spielernamen hier ein und klicke \"Speichern\",\num das Savegame System zu demonstrieren",
-    "button_save": "Speichern",
-    "button_load": "Laden",
-    "button_save_enc": "Speichern verschl.",
-    "button_load_enc": "Laden verschlüsselt",
-    "info": {
-      "about": "Du siehst hier ein leeres gml-raptor Projekt.[delay,750]\nNur 1 Font,[delay,250] keine Button Sprites,[delay,250] das ist alles auf default.[delay,750]\nBewege die Maus über die Elemente,[delay,250] einige von ihnen\nhaben einen [c_white]Tooltip[/][delay,250], der dir sagt,[delay,250]\nwo du den Code im Projekt[delay,250] für dieses spezifische Item findest.[delay,750]\n\nAchja, der Font ist im Script [delay,250][c_white]Game_Configuration[/] als[delay,250]\n[delay,250][c_white]scribble_font_set_default[/][delay,250] eingetragen![delay,750]\n\nDieser Text wird dir freundlich präsentiert[delay,250] von der [c_white]StoryTeller[/] Control!",
-      "hotswap": "Klicke die Sprachbuttons,\num LG_hotswap in Aktion zu sehen",
-      "flag": "Die animated_flag in Aktion ->",
-      "save_loc": "Die Savegame Dateien sind in\nC:/Benutzer/<dein-user-name>/appdata/local/gml_raptor_demo"
-    },
-    "demo_message": {
-      "title": "Demo MessageBox",
-      "text": "Das ist eine Nachricht mit [ci_accent]super wichtiger Information[/]\nfür den Benutzer!\n\nMit nur einer Zeile code!",
-      "click_title": "Button geklickt",
-      "ok_clicked": "Du hast [ci_accent]OK[/] geklickt",
-      "cancel_clicked": "Du hast [ci_accent]ABBRECHEN[/] geklickt"
-    },
-    "tooltips": {
-      "language_button": "Objekt: Objects\\LanguageButton\nCode: Scripts\\MainMenuButtons\nEinstellungen: RoomEditor Variables auf diesem Objekt",
-      "game_button": "Objekt: _gml_raptor_\\UI\\controls\\TextButton\nCode: Scripts\\MainMenuButtons\nEinstellungen: RoomEditor Variables auf diesem Objekt",
-      "demo_label": "Dieser String wurde mittels String Reference in json aufgelöst.\nSieh in die locale_de.json bei \"main_menu/header_text\" im Included Files\\locale Ordner!",
-      "version_label": "Sieh dir die version.json Datei im Included Files Ordner an!",
-      "inputbox": "Gib etwas Text ein und teste die UX:\n[ci_accent]Cursortasten[/], [ci_accent]Shift+Cursor[/]\n[ci_accent]Pos1, End[/] (mit und ohne Shift)\n[ci_accent]Mouse-Click[/], [ci_accent]Mouse-Drag[/] zum Selektieren,\n[ci_accent]Strg-C, Strg-X, Strg-V[/] etc\n\nDie InputBox ist sehr komfortabel!",
-      "playground_button": "Grisgram's Spielwiese.\nDieser Raum ist nicht übersetzt, keine Benutzerführung.\nHier teste ich einige Features von raptor, was auch immer gerade\nin Entwicklung ist.",
-      "animation": "Hier siehst du eine Animation, die mit nur einer Zeile Code\nerstellt wurde, basierend auf AnimCurves.\nDie Partikel-Emitter sind gänzlich ohne Code erstellt.\nDie Partikel selbst wurden mit dem ParticleEditor generiert.\nSchau ins [ci_accent]raptor-wiki[/] für mehr Information!",
-      "ui_theme": "Ein [ci_accent]THEME[/] ist ein vordefiniertes Set von Farben für das UI und kann jederzeit gewechselt werden!\nSchau in die [ci_accent]UI THEMES[/] Seite im wiki!",
-      "ui_skin": "Eine [ci_accent]SKIN[/] ist ein Set von Sprites und Parametern, welches das Aussehen der UI verändert.\nKann jederzeit gewechselt werden, sogar ohne den Raum neu zu starten!\nSchau in die [ci_accent]UI SKINS[/] Seite im wiki!"
-    },
-    "start_playground": "[scale,1.25]Dev Playground",
-    "start_uidemo": "[scale,1.25]UI Demo starten",
-    "version_label_string": "[c_yellow]<- Dies ist die GameVersionLabel control[/]",
-    "copyright_label_string": "[c_yellow]<- Dies ist die CopyrightLabel control[/]",
-    "label_choose_theme": "Wähle das UI_THEME mit diesen Buttons.\nBlau ist das default theme von raptor.",
-    "label_choose_skin": "Wähle die UI_SKIN mit diesen Buttons.\nLinks ist die default skin von raptor."
-  },
-  "play": {
-    "how_to_play_states": {
-      "title": "Spielregeln",
-      "text": "Du bewegst dich mit den WASD Tasten.\n\nIn der Mitte des Bildschirms erscheint ein [ci_accent]Spawner[/].\nEr spuckt ständig [ci_accent]Gegner[/] aus.\n \nSie sehen dich, wenn du in ihren gelben [ci_accent]Scanner-Bereich[/] kommst.\n\n[shake]Dann stirbst du.[/]\n\nWenn du einen Gegner von hinten berührst, [shake]dann stirbt der Gegner![/]\n \n[ci_accent]Versuche, so lange wie möglich am Leben zu bleiben!"
-    },
-    "how_to_play_race": {
-      "title": "Race Demo",
-      "text": "Dies ist eine kurze Demo, die ein Spielfeld wie in einem Match-3 Spiel\nmit zufälligen Edelsteinen mit Hilfe von [ci_accent]RaceTables[/] füllt.\n\nDu kannst die Wahrscheinlichkeiten und den Enabled-Zustand anpassen.\n\nIm Raum befindet sich ein [ci_accent]RaceController[/] und ein [ci_accent]RaceTable[/] Objekt.\n\n[scale,1.25][ci_accent]ACHTUNG![/] Dies ist ein [ci_accent]DEMO[/] Programm!\nDie Eingabefelder sind nicht abgesichert!\nWenn du nonsens eingibst (zb. keine Zahlen als Chance), dann wird es abstürzen!\n\nKlicke auf [ci_accent]Starten[/], um das Spielfeld zu füllen."
-    },
-    "game_over": {
-      "title": "Game over",
-      "text": "Du wurdest entdeckt!\n\nAber du hast immerhin [ci_accent]{0}[/] Gegner eliminiert!\n\nNun geht's zurück zum [ci_accent]Hauptmenü[/]."
-    },
-    "ui": {
-      "score_view": "Gegner eliminiert: [ci_accent][scale,1.5]{0}[/]",
-      "debug_info": "Drücke [ci_accent]F12[/] um die Debug-Infos ein-/auszublenden",
-      "enabled": "Aktiv",
-      "chance": "Chance",
-      "race_start_button": "[scale,1.25]Starten",
-      "race_exit_button": "[scale,1.25]Demo Beenden"
-    }
-  },
-  "ui_demo": {
-    "sizable_window_title": "Ein vergrößerbares Fenster",
-    "window_title_docking": "Control Docking",
-    "show_login": "[scale,1.25][?=ui_demo/window_title_login]",
-    "show_alignment": "[scale,1.25][?=ui_demo/window_title_alignment]",
-    "login_top_message": "Einloggen, um fortzufahren",
-    "login_user": "Benutzername:",
-    "login_pwd": "Passwort:",
-    "login_button": "Anmelden",
-    "login_remember": "Benutzername und Password merken",
-    "login_entered_values": "Auslesen, der eingegebenen Daten aus einem dynamischen Fenster:",
-    "add_dock_plus": "+",
-    "show_anchoring": "[scale,1.25][?=ui_demo/window_title_anchoring]",
-    "dock_demo_info": "Klicke einen der [ci_main]'x'[/] Buttons,\num dynamisch gedockte Elemente zu erzeugen.\n\nLinks- oder Rechts-Klicke [ci_main]gedockte Elemente[/],\num sie zu vergrößern/verkleinern\nund dynamisches Layout zu sehen.",
-    "show_control_tree": "[scale,1.25][?=ui_demo/window_title_docking]",
-    "anchor_top_message": "Demonstration des [ci_accent]Anchoring[/] (Verankerung) von Controls",
-    "window_title_alignment": "Control Alignment",
-    "window_title_login": "Login Dialog Demo",
-    "window_title_anchoring": "Control Anchoring",
-    "alignment_top_message": "Demonstration des [ci_accent]alignment[/] (Ausrichtung) von Controls",
-    "label_made_with_tree": "[ci_dark]Die Buttons (und dieser Text hier)[/] \nwurden ebenfalls mit dem [ci_dark]ControlTree[/] \nauf dem [ci_dark]UI_ROOT[/] erstellt!\nSieh dir den RoomController \ndieses Raums an, dann siehst du, \nwie es gemacht wurde!"
-  }
 }
