--- a/example-projects/gml-raptor-demo/datafiles/locale/locale_en.json
+++ b/example-projects/gml-raptor-demo/datafiles/locale/locale_en.json
@@ -10,8 +10,14 @@
     "game_channel_prod": "Production",
     "game_channel_dev": "Development"
   },
+  "startup_server": {
+	  "connecting": "Connecting to Server...",
+	  "connection_success": "[?states/connected]",
+	  "connection_failed": "[?states/disconnected]",
+  },
   "credits": {
-    "credits_title": "Credits"
+    "credits_title": "Credits",
+	"credits_text": "",
   },
   "global_words": {
     "buttons": {
@@ -43,91 +49,4 @@
       "open": "Open"
     }
   },
-  "main_menu": {
-    "header_text": "Welcome to [?legal/game_name]",
-    "version_str": "Version {0} [c_yellow]<- This demonstrates the contents of the version.json file[/]",
-    "start_state_game": "[scale,1.25]Start StateMachine Demo",
-    "start_race_game": "[scale,1.25]Start Race Demo",
-    "show_message": "[scale,1.25]Show MessageBox",
-    "exit_game": "[scale,1.25]Exit Game",
-    "player_name": "Enter your name in the box below\nand click \"Save\" to demo the Savegame System",
-    "button_save": "Save",
-    "button_load": "Load",
-    "button_save_enc": "Save encrypted",
-    "button_load_enc": "Load encrypted",
-    "info": {
-      "about": "You see a blank gml-raptor project here.[delay,750]\nOnly 1 Font,[delay,250] no Button Sprites,[delay,250] this is all default.[delay,750]\nHover over elements, [delay,250]some of them\noffer a [c_white]Tooltip[/][delay,250] that tells you,[delay,250]\nwhere you can find the code in the project[delay,250] for that specific item.[delay,750]\n\nOh, btw, the font is set as [delay,250][c_white]scribble_font_set_default[/][delay,250]\nin the [delay,250][c_white]Game_Configuration script[/]![delay,750]\n\nThis text is presented by the [delay,250][c_white]StoryTeller[/] Control!",
-      "hotswap": "Click the locale buttons,\nto see LG_hotswap in action",
-      "flag": "The animated_flag in action ->",
-      "save_loc": "Your Savegames are located at\nC:/Users/<your-user-name>/appdata/local/gml_raptor_demo"
-    },
-    "demo_message": {
-      "title": "Demo MessageBox",
-      "text": "This is a message displaying [ci_accent]super important information[/]\nto the user!\n\nWith a single line of code!",
-      "click_title": "Button clicked",
-      "ok_clicked": "You clicked [ci_accent]OK",
-      "cancel_clicked": "You clicked [ci_accent]CANCEL"
-    },
-    "tooltips": {
-      "language_button": "Object: Objects\\LanguageButton\nCode: Scripts\\MainMenuButtons\nSettings: RoomEditor Variables on this Object",
-      "game_button": "Object: _gml_raptor_\\UI\\controls\\TextButton\nCode: Scripts\\MainMenuButtons\nSettings: RoomEditor Variables on this Object",
-      "demo_label": "This string is resolved via string reference in json.\nLook at the locale_en.json in the Included Files\\locale folder at \"main_menu/header_text\"!",
-      "version_label": "Look at the version.json File in the Included Files folder!",
-      "inputbox": "Enter some text and test the UX:\n[ci_accent]Cursor keys[/], [ci_accent]Shift+Cursor[/]\n[ci_accent]Home, End[/] (with and without Shift)\n[ci_accent]Mouse-Click[/], [ci_accent]Mouse-Drag[/] to select,\n[ci_accent]Ctrl-C, Ctrl-X, Ctrl-V[/] etc\n\nThe InputBox offers quite some comfort!",
-      "playground_button": "Grisgram's domain.\nIn this room I test some features of raptor.\nIt's not translated, no user guidance, it's... my playground!",
-      "animation": "You see here an animation that is done with a single line of code,\nbased on AnimCurves.\nThe particle emitters are codeless and are done with the\nParticleEditor tool (see [ci_accent]raptor wiki[/] for more information)",
-      "ui_theme": "A [ci_accent]THEME[/] is a pre-defined set of colors and can be swapped any time!\nSee the [ci_accent]UI Themes[/] page in the wiki!",
-      "ui_skin": "A [ci_accent]SKIN[/] is a set of sprites and values that changes, how your UI looks.\nCan be swapped any time, even without restarting the room!\nSee the [ci_accent]UI Themes[/] page in the wiki!"
-    },
-    "start_playground": "[scale,1.25]Dev Playground",
-    "start_uidemo": "[scale,1.25]Start UI Demo",
-    "version_label_string": "[c_yellow]<- This is the GameVersionLabel control[/]",
-    "copyright_label_string": "[c_yellow]<- This is the CopyrightLabel control[/]",
-    "label_choose_theme": "Choose the UI_THEME with these buttons.\nBlue is raptor's default.",
-    "label_choose_skin": "Choose the UI_SKIN with these buttons.\nThe left one is raptor's default."
-  },
-  "play": {
-    "how_to_play_states": {
-      "title": "How to play",
-      "text": "Move your character with WASD keys.\n\nIn the middle of the screen, a [ci_accent]Spawner[/] will appear.\nIt spits out [ci_accent]enemies[/] every now and then.\n\nThey see you when you enter their yellow [ci_accent]Scanner range[/].\n\n[shake]Then you die.[/]\n\nIf you can touch an enemy on its back side, [shake]then the enemy dies![/]\n\n[ci_accent]Try to survive as long as you can!"
-    },
-    "how_to_play_race": {
-      "title": "Race Demo",
-      "text": "This is a short demo filling a playing field, that could be any Match-3 game\nwith random gems using [ci_accent]RaceTables[/].\n\nYou can modify the chances and enabled states with the controls.\n\nThis room contains a [ci_accent]RaceController[/] and a [ci_accent]RaceTable[/] object.\n\n[scale,1.25][ci_accent]WARNING![/] This is a [ci_accent]DEMO[/] Program!\nThe InputBoxes perform no type-checking!\nIf you enter nonsense (i.e. no numbers as Chance), it will crash!\n\nClick the [ci_accent]Run[/] button to fill the board."
-    },
-    "game_over": {
-      "title": "Game over",
-      "text": "You got caught!\n\nBut you could at least eliminate [ci_accent]{0}[/] enemies!\n\nNow we're heading back to the [ci_accent]Main Menu[/]."
-    },
-    "ui": {
-      "score_view": "Enemies eliminated: [ci_accent][scale,1.5]{0}[/]",
-      "debug_info": "Press [ci_accent]F12[/] to show/hide the debug infos",
-      "enabled": "Enabled",
-      "chance": "Chance",
-      "race_start_button": "[scale,1.25]Run",
-      "race_exit_button": "[scale,1.25]Back to Main"
-    }
-  },
-  "ui_demo": {
-    "sizable_window_title": "A sizable window",
-    "window_title_docking": "Control Docking",
-    "show_login": "[scale,1.25][?=ui_demo/window_title_login]",
-    "show_alignment": "[scale,1.25][?=ui_demo/window_title_alignment]",
-    "login_top_message": "To continue, login here",
-    "login_user": "Username:",
-    "login_pwd": "Password:",
-    "login_button": "Login",
-    "login_remember": "Remember user name and password",
-    "login_entered_values": "Demonstrating read-out of control in a dynamic window:",
-    "add_dock_plus": "+",
-    "show_anchoring": "[scale,1.25][?=ui_demo/window_title_anchoring]",
-    "dock_demo_info": "Press any of the [ci_main]'x'[/] buttons to\ndynamically add docked elements.\n\nLeft- or right-click any of the [ci_main]docked elements[/]\nto grow/shrink them to see dynamic re-layouting.",
-    "show_control_tree": "[scale,1.25][?=ui_demo/window_title_docking]",
-    "anchor_top_message": "Demonstrating control [ci_accent]anchoring[/]",
-    "window_title_alignment": "Control Alignment",
-    "window_title_login": "Login Dialog Demo",
-    "window_title_anchoring": "Control Anchoring",
-    "alignment_top_message": "Demonstrating control [ci_accent]alignment[/]",
-    "label_made_with_tree": "[ci_dark]The Buttons (and this text here)[/]\nhave been created and aligned through\nthe [ci_dark]ControlTree[/] at the [ci_dark]UI_ROOT[/]!\nTake a look at the source code of the \nRoomController of this room, there you\ncan see, how this has been done!\n"
-  }
 }
