json compiler fix

--- a/tools/raptor-json-compiler/datafiles/locale/locale_de.json
+++ b/tools/raptor-json-compiler/datafiles/locale/locale_de.json
@@ -1,6 +1,6 @@
 {
   "legal": {
-    "game_name": "enter-game-name-here",
+    "game_name": "raptor-json-compiler",
     "company": "Coldrock Games",
 	"company_website": "https://www.coldrock.games",
     "copyright": "Copyright (c) [? legal/company]",
